// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Accordion AvecIcone smoke-test 1`] = `
<div>
  <div role="button"
       tabindex="0"
       aria-expanded="false"
       class="border border-grey-4 rounded-lg flex gap-3 px-6 py-4 font-bold text-primary-10 hover:bg-primary-1"
  >
    <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary transition-transform">
    </span>
    <span class="ri-information-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary">
    </span>
    <div class="-mt-0.5">
      Titre
    </div>
  </div>
</div>
`;

exports[`design-system/Accordion AvecIconeADroite smoke-test 1`] = `
<div>
  <div role="button"
       tabindex="0"
       aria-expanded="false"
       class="border border-grey-4 rounded-lg flex gap-3 px-6 py-4 font-bold text-primary-10 hover:bg-primary-1"
  >
    <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary transition-transform">
    </span>
    <div class="-mt-0.5">
      Titre
    </div>
    <span class="ri-information-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] ml-auto text-primary">
    </span>
  </div>
</div>
`;

exports[`design-system/Accordion AvecIconeSVG smoke-test 1`] = `
<div>
  <div role="button"
       tabindex="0"
       aria-expanded="false"
       class="border border-grey-4 rounded-lg flex gap-3 px-6 py-4 font-bold text-primary-10 hover:bg-primary-1"
  >
    <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary transition-transform">
    </span>
    <svg class="fill-primary-7"
         width="18"
         height="18"
         viewbox="0 0 24 24"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M11.602 13.7615L13.014 15.1735L21.48 6.70747L22.894 8.12147L13.014 18.0015L6.65 11.6375L8.064 10.2235L10.189 12.3485L11.602 13.7605V13.7615ZM11.604 10.9335L16.556 5.98047L17.966 7.39047L13.014 12.3435L11.604 10.9335ZM8.777 16.5885L7.364 18.0015L1 11.6375L2.414 10.2235L3.827 11.6365L3.826 11.6375L8.777 16.5885V16.5885Z">
      </path>
    </svg>
    <div class="-mt-0.5">
      Titre
    </div>
  </div>
</div>
`;

exports[`design-system/Accordion AvecSousTitre smoke-test 1`] = `
<div>
  <div role="button"
       tabindex="0"
       aria-expanded="false"
       class="border border-grey-4 rounded-lg flex gap-3 px-6 py-4 font-bold text-primary-10 hover:bg-primary-1"
  >
    <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary transition-transform">
    </span>
    <span class="ri-lock-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary">
    </span>
    <div class="-mt-0.5">
      Titre
      <span class="font-normal text-xs mt-2 line-clamp-1">
        Cette section est visible uniquement par les membres de votre collectivité
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Accordion CompletTitreLong smoke-test 1`] = `
<div>
  <div role="button"
       tabindex="0"
       aria-expanded="false"
       class="border border-grey-4 rounded-lg flex gap-3 px-6 py-4 font-bold text-primary-10 hover:bg-primary-1"
  >
    <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary transition-transform">
    </span>
    <div class="-mt-0.5">
      Titre long qui prend plusieurs lignes, qui est vraiment très long et qui ne finit pas de finir
      <span class="font-normal text-xs mt-2 line-clamp-1">
        Cette section est visible uniquement par les membres de votre collectivité
      </span>
    </div>
    <span class="ri-lock-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] ml-auto text-primary">
    </span>
  </div>
</div>
`;

exports[`design-system/Accordion ContenuPersonnalise smoke-test 1`] = `
<div>
  <div role="button"
       tabindex="0"
       aria-expanded="false"
       class="border border-grey-4 rounded-lg flex gap-3 px-6 py-4 font-bold text-primary-10 hover:bg-primary-1"
  >
    <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary transition-transform">
    </span>
    <div class="-mt-0.5">
      Titre
    </div>
  </div>
</div>
`;

exports[`design-system/Accordion ContenuStyle smoke-test 1`] = `
<div>
  <div role="button"
       tabindex="0"
       aria-expanded="false"
       class="border border-grey-4 rounded-lg flex gap-3 px-6 py-4 font-bold text-primary-10 hover:bg-primary-1"
  >
    <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary transition-transform">
    </span>
    <div class="-mt-0.5">
      Titre
    </div>
  </div>
</div>
`;

exports[`design-system/Accordion ControlleOuvert smoke-test 1`] = `
<div>
  <div role="button"
       tabindex="0"
       aria-expanded="true"
       class="border border-grey-4 rounded-lg flex gap-3 px-6 py-4 font-bold text-primary-10 hover:bg-primary-1 border-primary-2 rounded-b-none bg-primary-2"
  >
    <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary transition-transform transform: rotate-90">
    </span>
    <div class="-mt-0.5">
      Titre
    </div>
  </div>
  <div class="px-10 py-6 border border-t-0 border-grey-4 rounded-b-lg text-grey-8 [&amp;_a]:break-all">
    Contenu
  </div>
</div>
`;

exports[`design-system/Accordion Default smoke-test 1`] = `
<div>
  <div role="button"
       tabindex="0"
       aria-expanded="false"
       class="border border-grey-4 rounded-lg flex gap-3 px-6 py-4 font-bold text-primary-10 hover:bg-primary-1"
  >
    <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-primary transition-transform">
    </span>
    <div class="-mt-0.5">
      Titre
    </div>
  </div>
</div>
`;
